--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/account/login.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/account/login.xhtml
@@ -8,8 +8,8 @@
 	
 	<ui:define name="bodyNavigation">
 		<h:outputScript>
-  			$j(document).ready( function() {
-				$j("#userNickname").focus();
+  			jQuery(document).ready( function() {
+				jQuery("#userNickname").focus();
 			});
    		</h:outputScript>
 	
