--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementNewStepOne.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementNewStepOne.xhtml
@@ -92,7 +92,7 @@
 					<h:inputTextarea id="listExchangeBy" value="#{advertisementBean.advertisement.listExchangeBy}" rows="3" styleClass="inputTextAreaMainForm mediumInputMainForm">
 					</h:inputTextarea>
 					
-					<h:graphicImage id="listExchangeByInfo" value="#{request.contextPath}/images/help.png" style="margin-left: 10px;">
+					<h:graphicImage id="listExchangeByInfo" value="/images/help.png" style="margin-left: 10px;">
 						<rich:tooltip target="listExchangeByInfo" attached="true" direction="auto" followMouse="true" showDelay="500" value="#{msg.advertisementExchangeByInfo}"/>
 					</h:graphicImage>
 				</h:panelGrid>
