--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/exceptions/expiredException.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/exceptions/expiredException.xhtml
@@ -11,7 +11,7 @@
 			<h1>#{msg.expiredSessionHeadMsg}</h1>
 			
 			<h:panelGrid columns="2" columnClasses="columnLeftExpiredException, columnRightExpiredException" style="width: 100%;">
-				<h:graphicImage value="#{request.contextPath}/images/bullet_error.png"/>
+				<h:graphicImage value="/images/bullet_error.png"/>
 				
 				<h:panelGroup layout="block">
 					<h:outputText value="#{msg.expiredSessionMsgYourSessionExpired}"/>
