--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/account/accountConsult.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/account/accountConsult.xhtml
@@ -33,7 +33,7 @@
 				
 				<!-- state -->
 				<h:outputLabel value="#{msg.stateTitle}:" for="useAccountState"/>
-				<bargas:outputText id="useAccountState" value="#{userAccountBean.userAccount.state.name} (#{userAccountBean.userAccount.state.acronym})"
+				<bargas:outputText id="useAccountState" value="#{userAccountBean.userAccount.city.state.name} (#{userAccountBean.userAccount.city.state.acronym})"
 					styleClass="inputMainForm bigInputMainForm inputDisable"/>
 				
 				<!-- city -->
