--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/aboutSite/aboutSiteForm.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/aboutSite/aboutSiteForm.xhtml
@@ -10,7 +10,7 @@
 		
 		<!-- text -->
 		<h:outputLabel value="#{msg.aboutSiteText}:" for="text"/>
-		<h:inputTextarea id="text" value="#{aboutSiteBean.aboutSite.stringText}" rows="7" styleClass="inputMainForm bigInputMainForm">
+		<h:inputTextarea id="text" value="#{aboutSiteBean.aboutSite.text}" rows="7" styleClass="inputMainForm bigInputMainForm">
 		</h:inputTextarea>
 	</h:panelGrid>
 
