--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisement/advertisementConsult.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisement/advertisementConsult.xhtml
@@ -44,7 +44,7 @@
 			
 			<!-- list exchange by -->
 			<h:outputLabel value="#{msg.advertisementListExchangeBy}:" for="listExchangeBy"/>
-			<h:outputText id="listExchangeBy" value="#{advertisementBean.advertisement.listExchangeBy}"/>
+			<h:outputText id="listExchangeBy" value="#{advertisementBean.advertisement.exchangeBy}"/>
 		</h:panelGrid>
 		
 		<t:saveState value="#{advertisementBean.advertisement}"/>
