--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisementType/advertisementTypeConsult.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisementType/advertisementTypeConsult.xhtml
@@ -25,7 +25,7 @@
 			
 			<!-- advertisiment score -->
 			<h:outputLabel value="#{msg.privateAreaAdvertisementScore}:" for="advertisementScore"/>
-			<h:outputText id="advertisementScore" value="#{advertisementTypeBean.advertisementType.advertisementScore}"/>
+			<h:outputText id="advertisementScore" value="#{advertisementTypeBean.advertisementType.score}"/>
 			
 			<!-- total pictures -->
 			<h:outputLabel value="#{msg.privateAreaTotalImages}:" for="totalImages"/>
