--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisementType/advertisementTypeFilter.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisementType/advertisementTypeFilter.xhtml
@@ -15,7 +15,7 @@
 		
 		<!-- advertisiment score -->
 		<h:outputLabel value="#{msg.privateAreaAdvertisementScore}:" for="advertisementScore"/>
-		<h:inputText id="advertisementScore" value="#{advertisementTypeBean.advertisementType.advertisementScore}"
+		<h:inputText id="advertisementScore" value="#{advertisementTypeBean.advertisementType.score}"
 					maxlength="11" styleClass="inputMainForm mediumInputMainForm"/>
 		
 		<!-- total pictures -->
