--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementConsultData.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementConsultData.xhtml
@@ -72,7 +72,7 @@
 			
 			<!-- list exchange by -->
 			<h:outputLabel value="#{msg.advertisementListExchangeBy}:" for="listExchangeBy"/>
-			<bargas:outputText id="listExchangeBy" value="#{advertisementBean.advertisement.listExchangeBy}"
+			<bargas:outputText id="listExchangeBy" value="#{advertisementBean.advertisement.exchangeBy}"
 						styleClass="inputMainForm bigInputMainForm inputDisable"/>
 						
 			<!-- sales code -->
