--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementNewStepThree.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementNewStepThree.xhtml
@@ -29,7 +29,7 @@
 				
 				<!-- use term -->
 				<h:column />
-				<h:inputTextarea id="useTerm" value="#{advertisementBean.useTerm.stringText}" rows="13" styleClass="inputMainForm bigInputMainForm"
+				<h:inputTextarea id="useTerm" value="#{advertisementBean.useTerm.text}" rows="13" styleClass="inputMainForm bigInputMainForm"
 					readonly="true" style="margin-top: 40px;">
 				</h:inputTextarea>
 				
