--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementEditData.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/advertisement/advertisementEditData.xhtml
@@ -56,7 +56,7 @@
 		<!-- list exchange by -->
 		<h:outputLabel value="#{msg.advertisementListExchangeBy}:" for="listExchangeBy"/>
 		<h:panelGrid columns="2" cellpadding="0" cellspacing="0">
-			<h:inputTextarea id="listExchangeBy" value="#{advertisementBean.advertisement.listExchangeBy}" rows="3" styleClass="inputTextAreaMainForm mediumInputMainForm">
+			<h:inputTextarea id="listExchangeBy" value="#{advertisementBean.advertisement.exchangeBy}" rows="3" styleClass="inputTextAreaMainForm mediumInputMainForm">
 			</h:inputTextarea>
 			
 			<h:graphicImage id="listExchangeByInfo" value="/images/help.png" style="margin-left: 10px;">
