--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/bases/adminbase.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/bases/adminbase.xhtml
@@ -14,7 +14,7 @@
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-richfaces.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-shared.css" />
    			<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-			<script type="text/javascript" src="/org.richfaces.resources/javax.faces.resource/org.richfaces.staticResource/4.2.2.Final/PackedCompressed/jquery.js"></script>
+			<script type="text/javascript" src="#{request.contextPath}/org.richfaces.resources/javax.faces.resource/org.richfaces.staticResource/4.2.2.Final/Packed/jquery.js"></script>
    			<script src="#{request.contextPath}/javascript/module.js" type="text/javascript" />
    			<script src="#{request.contextPath}/javascript/jquery.maskMoney.js" type="text/javascript" />
    		</h:head>
