--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/bases/base.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/bases/base.xhtml
@@ -22,7 +22,7 @@
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-messages.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-richfaces.css" />
 			<link type="text/css" rel="stylesheet" href="#{request.contextPath}/css/styles-shared.css" />
-<!--    			<script type="text/javascript" src="/org.richfaces.resources/javax.faces.resource/org.richfaces.staticResource/4.2.2.Final/PackedCompressed/jquery.js"></script> -->
+   			<script type="text/javascript" src="#{request.contextPath}/org.richfaces.resources/javax.faces.resource/org.richfaces.staticResource/4.2.2.Final/Packed/jquery.js"></script>
    			<script src="#{request.contextPath}/javascript/module.js" type="text/javascript" />
    			<script src="#{request.contextPath}/javascript/jquery.maskMoney.js" type="text/javascript" />
    		</h:head>
@@ -125,9 +125,9 @@
 					
 					<h:outputScript>
 						function validateInputSearch() {
-							if (lessThan(jQuery("#searchField").val().length, 1)) {
+							if (lessThan($j("#searchField").val().length, 1)) {
 								alert("Indique um texto para busca!");
-								jQuery("#searchField").focus();
+								$j("#searchField").focus();
 								return false;
 							}
 							return true;
