--- a/project/war/xhtml/account/login.xhtml
+++ b/project/war/xhtml/account/login.xhtml
@@ -8,8 +8,8 @@
 	
 	<ui:define name="bodyNavigation">
 		<h:outputScript>
-  			jQuery(document).ready( function() {
-				jQuery("#userNickname").focus();
+  			$j(document).ready( function() {
+				$j("#userNickname").focus();
 			});
    		</h:outputScript>
 	
