--- a/project/war/xhtml/admin/advertisementType/advertisementTypeList.xhtml
+++ b/project/war/xhtml/admin/advertisementType/advertisementTypeList.xhtml
@@ -64,7 +64,7 @@
 				</f:facet>
 			
 				<h:commandLink action="#{advertisementTypeBean.consult}" >
-					<h:outputText value="#{advertisementType.advertisementScore}"/>
+					<h:outputText value="#{advertisementType.score}"/>
 					<f:setPropertyActionListener value="#{advertisementType}" target="#{advertisementTypeBean.advertisementType}"/>
 				</h:commandLink>
 			</rich:column>
