--- a/project/war/xhtml/admin/useTerm/useTermForm.xhtml
+++ b/project/war/xhtml/admin/useTerm/useTermForm.xhtml
@@ -10,7 +10,7 @@
 		
 		<!-- text -->
 		<h:outputLabel value="#{msg.useTermText}:" for="text"/>
-		<h:inputTextarea id="text" value="#{useTermBean.useTerm.stringText}" rows="7" styleClass="inputMainForm bigInputMainForm">
+		<h:inputTextarea id="text" value="#{useTermBean.useTerm.text}" rows="7" styleClass="inputMainForm bigInputMainForm">
 		</h:inputTextarea>
 	</h:panelGrid>
 
