--- a/project/war/xhtml/advertisement/advertisementSelectPictures.xhtml
+++ b/project/war/xhtml/advertisement/advertisementSelectPictures.xhtml
@@ -72,7 +72,7 @@
 						<h:outputText value="#{msg.advertisementListPictures}"/>
 					</f:facet>
 				
-					<h:graphicImage value="/fileserver?q=#{currentSelectItem.value.thumbnail.keyAsString}" />
+					<h:graphicImage value="/fileserver?q=#{currentSelectItem.value.thumbnail.id}" />
 				</t:column>
 			
 				<t:column headerstyle="width: 60%;" style="padding: 5px;">
