--- a/project/war/xhtml/admin/advertisementType/advertisementTypeForm.xhtml
+++ b/project/war/xhtml/admin/advertisementType/advertisementTypeForm.xhtml
@@ -18,7 +18,7 @@
 		<!-- currency -->
 		<h:outputLabel value="#{msg.privateAreaCurrencyValue} ( #{msg.privateAreaCurrencySymbolReal} ):" for="currency"/>
 		<bargas:inputCurrencyConverted id="currency" value="#{advertisementTypeBean.advertisementType.value}" maxlength="12" 
-					styleClass="inputMainForm mediumInputMainForm" converterId="ConverterCurrencyReal"/>
+					styleClass="inputMainForm mediumInputMainForm" converterId="ConverterDoubleCurrencyReal"/>
 		
 		<!-- advertisiment score -->
 		<h:outputLabel value="#{msg.privateAreaAdvertisementScore}:" for="advertisementScore"/>
