--- a/project/war/xhtml/advertisement/advertisementConsultData.xhtml
+++ b/project/war/xhtml/advertisement/advertisementConsultData.xhtml
@@ -63,7 +63,7 @@
 			<!-- value -->
 			<h:outputLabel value="#{msg.privateAreaCurrencyValue} ( #{msg.privateAreaCurrencySymbolReal} ):" for="currencyValue" />
 			<bargas:outputTextConverted id="currencyValue" value="#{advertisementBean.advertisement.value}"
-				converterId="ConverterCurrencyReal" styleClass="inputMainForm bigInputMainForm inputDisable"/>
+				converterId="ConverterDoubleCurrencyReal" styleClass="inputMainForm bigInputMainForm inputDisable"/>
 			
 			<!-- is product new -->
 			<h:outputLabel value="#{msg.advertisementIsNewProduct} :" for="isProductNew"/>
