--- a/project/war/xhtml/advertisement/advertisementEditData.xhtml
+++ b/project/war/xhtml/advertisement/advertisementEditData.xhtml
@@ -51,7 +51,7 @@
 		<!-- value -->
 		<h:outputLabel value="#{msg.privateAreaCurrencyValue} ( #{msg.privateAreaCurrencySymbolReal} ):" for="currencyValue" />
 		<bargas:inputCurrencyConverted id="currencyValue" value="#{advertisementBean.advertisement.value}" maxlength="12"
-			styleClass="inputMainForm mediumInputMainForm" converterId="ConverterCurrencyReal"/>
+			styleClass="inputMainForm mediumInputMainForm" converterId="ConverterDoubleCurrencyReal"/>
 		
 		<!-- list exchange by -->
 		<h:outputLabel value="#{msg.advertisementListExchangeBy}:" for="listExchangeBy"/>
