--- a/project/war/xhtml/advertisement/advertisementNewStepOne.xhtml
+++ b/project/war/xhtml/advertisement/advertisementNewStepOne.xhtml
@@ -77,7 +77,7 @@
 				<!-- value -->
 				<h:outputLabel value="#{msg.privateAreaCurrencyValue} ( #{msg.privateAreaCurrencySymbolReal} ):" for="currencyValue" />
 				<bargas:inputCurrencyConverted id="currencyValue" value="#{advertisementBean.advertisement.value}" maxlength="12" 
-					styleClass="inputMainForm mediumInputMainForm" converterId="ConverterCurrencyReal"/>
+					styleClass="inputMainForm mediumInputMainForm" converterId="ConverterDoubleCurrencyReal"/>
 				
 				<!-- is product new -->
 				<h:outputLabel value="#{msg.advertisementIsNewProduct} :" for="isProductNew"/>
