--- a/project/war/xhtml/index.xhtml
+++ b/project/war/xhtml/index.xhtml
@@ -133,7 +133,7 @@
 													<h:panelGroup layout="block">
 														<h:outputText value="#{msg.msgRealCurrency} "/>
 														<h:outputText value="#{advertisement.value}">
-															<f:converter converterId="ConverterCurrencyReal"/>
+															<f:converter converterId="ConverterDoubleCurrencyReal"/>
 														</h:outputText>
 													</h:panelGroup>
 												</h:panelGrid>
