--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/public/advertisementConsult.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/public/advertisementConsult.xhtml
@@ -104,7 +104,7 @@
 				<h:panelGroup layout="block" styleClass="advertisementValueDetails">
 					<h:outputText value="#{msg.msgRealCurrency} "/>
 					<h:outputText value="#{siteBean.advertisement.value}">
-						<f:converter converterId="ConverterCurrencyReal"/>
+						<f:converter converterId="ConverterDoubleCurrencyReal"/>
 					</h:outputText>
 				</h:panelGroup>
 				
