--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisement/advertisementList.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/admin/advertisement/advertisementList.xhtml
@@ -72,7 +72,7 @@
 				
 				<h:commandLink action="#{advertisementBean.adminConsultAdvertisement}" >
 					<h:outputText value="#{advertisement.value}">
-						<f:converter converterId="ConverterCurrencyReal"/>
+						<f:converter converterId="ConverterDoubleCurrencyReal"/>
 					</h:outputText>
 					<f:setPropertyActionListener value="#{advertisement}" target="#{advertisementBean.advertisement}"/>
 				</h:commandLink>
