--- a/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/public/advertisementConsult.xhtml
+++ b/branches/vendasebarganhas-dev_migrating_platform_43/project/war/xhtml/public/advertisementConsult.xhtml
@@ -20,7 +20,7 @@
 		
 		<h:panelGrid columns="2" columnClasses="columnTop, advertisementDetailColumnTop">
 			<h:panelGrid>
-				<h:panelGroup layout="block">
+				<h:panelGroup layout="block" id="wrapperAdvertisementMainPicture">
 					<h:graphicImage id="advertisementMainPicture" value="/fileserver?q=#{siteBean.advertisement.sheetPicture.picture.id}"/>
 				</h:panelGroup>
 				
